--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "author": "旭林",
   "name": "my-blog",
   "private": true,
   "scripts": {
@@ -8,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
+    "github-markdown-css": "^5.1.0",
+    "highlight.js": "^11.4.0",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "rehype-highlight": "^5.0.2",
+    "rehype-stringify": "^9.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "sass": "^1.49.7",
+    "unified": "^10.1.1"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
@@ -18,5 +31,6 @@
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
     "typescript": "4.5.5"
-  }
+  },
+  "description": "这里是旭林的博客。"
 }
