--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: yarn lint
+        run: yarn -v
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
