--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CICD
 
 # Controls when the workflow will run
 on:
@@ -25,17 +25,25 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
-      - name: Setup Node.js environment
+      - name: Setup Node.js environment 14
         uses: actions/setup-node@v2.5.1
         with:
           node-version: 14
         
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: yarn -v
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # yarn install & build
+      - name: Run yarn install & build
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          yarn
+          yarn build
+          
+      # Upload build file
+      - name: Upload build file
+        uses: appleboy/scp-action@master
+        with:
+         host: ${{ secrets.HOST }}
+         username: ${{ secrets.USERNAME }}
+         password: ${{ secrets.PASSWORD }}
+         port: ${{ secrets.PORT }}
+         source: "./next"
+         target: "/home/build/my-blog"
+         rm: true
