--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  lint:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -24,26 +24,36 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
+
       - name: Setup Node.js environment 14
         uses: actions/setup-node@v2.5.1
         with:
           node-version: 14
-        
+
       # yarn install & build
-      - name: Run yarn install & build
+      - name: Run yarn install & lint
         run: |
           yarn
-          yarn build
-          
-      # Upload build file
-      - name: Upload build file
-        uses: appleboy/scp-action@master
+          yarn lint
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    needs: lint
+
+    steps:
+      - name: Deploy to production
+        uses: appleboy/ssh-action@master
         with:
-         host: ${{ secrets.HOST }}
-         username: ${{ secrets.USERNAME }}
-         password: ${{ secrets.PASSWORD }}
-         port: ${{ secrets.PORT }}
-         source: "./.next"
-         target: "/home/build/my-blog"
-         rm: true
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cd /home/project
+            rm -rf my-blog
+            git clone git@github.com:wuuli/my-blog.git
+            cd my-blog
+            yarn install
+            yarn build
+            pm2 startOrRestart ecosystem.config.js --env production
