--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@types/react": "17.0.38",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
+    "pm2": "^5.1.2",
     "typescript": "4.5.5"
   },
-  "description": "这里是旭林的博客。"
+  "description": "旭林的博客"
 }
