--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,8 @@
 
 name: CICD
 
+concurrency: production
+
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
@@ -57,3 +59,4 @@ jobs:
             yarn install
             yarn build
             pm2 startOrRestart ecosystem.config.js --env production
+            pm2 save
