--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.2.1",
+    "@mdx-js/react": "^2.2.1",
+    "@next/mdx": "^13.1.4",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "github-markdown-css": "^5.1.0",
     "highlight.js": "^11.4.0",
-    "next": "12.0.9",
+    "next": "^12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rehype-highlight": "^5.0.2",
     "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
+    "remark-mdx": "^2.2.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "sass": "^1.49.7",
